# ff1d-ftsw-pub

./: .gitignore  LICENCE.txt  README.md  pyproject.toml
src/ff1d/ftsw_pub/: __about__.py
src/ff1d_ftsw_pub/: __about__.py  __init__.py
src/ff1d_ftsw_pub/data/ens_amplitude/: ensemble.parquet  experimental.npz  manifest.toml
src/ff1d_ftsw_pub/data/ens_dimensionless/: manifest.toml  multi_harmonics_ensemble.parquet
src/ff1d_ftsw_pub/data/fig04/: jumps.csv  manifest.toml  reference_experiment_parameters.json
src/ff1d_ftsw_pub/data/fracture_search/: energy_diagnostic.npz  fracture_deflections.npz  fracture_values.json  manifest.toml  parameters.json
src/ff1d_ftsw_pub/data/joint_density/: manifest.toml  thickness_modulus_ensemble.npz
src/ff1d_ftsw_pub/data/quad_regions/: manifest.toml  nondim_wavenumbers.csv  quad_0.npz  quad_1.npz  quad_2.npz  quad_3.npz
src/ff1d_ftsw_pub/data/quad_regions_disp/: manifest.toml  normalised_fractures.csv  normalised_relax_lengths.csv  quad_disp_0.npz  quad_disp_1.npz  quad_disp_2.npz  quad_disp_3.npz
src/ff1d_ftsw_pub/data/schematics/: manifest.toml  results.npz
src/ff1d_ftsw_pub/data/strain_fracture/: manifest.toml  strain_diagnostic.npz  strain_values.json
src/ff1d_ftsw_pub/lib/: data.py  paper.mplstyle  params.py  plot.py  utils.py
src/ff1d_ftsw_pub/ui/: cli.py
tests/: __init__.py  test_data.py
