[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ff1d-ftsw-pub"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = []
authors = [{ name = "Nicolas Mokus", email = "nmks@tuta.io" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["numpy", "matplotlib", "polars", "seaborn"]

[project.urls]
Documentation = "https://github.com/sasip-climate/ff1d-ftsw-pub#readme"
Issues = "https://github.com/sasip-climate/ff1d-ftsw-pub/issues"
Source = "https://github.com/sasip-climate/ff1d-ftsw-pub"

[tool.hatch.build.targets.wheel]
packages = ["src/ff1d"]

[tool.hatch.version]
path = "src/ff1d/ftsw_pub/__about__.py"

[tool.coverage.run]
branch = true
source = ["src", "tests"]
parallel = true
omit = ["src/ff1d/ftsw_pub/__about__.py"]

[tool.coverage.paths]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
skip = [".gitignore"]
force_sort_within_sections = true
combine_as_imports = true
